--- a/public/style.css
+++ b/public/style.css
@@ -619,10 +619,6 @@ video {
   right: 0px;
 }
 
-.m-32 {
-  margin: 8rem;
-}
-
 .mx-\[120px\] {
   margin-left: 120px;
   margin-right: 120px;
@@ -631,10 +627,6 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
 }
 
 .mb-11 {
@@ -669,16 +661,20 @@ video {
   margin-bottom: 60px;
 }
 
-.ml-32 {
-  margin-left: 8rem;
-}
-
 .mt-3 {
   margin-top: 0.75rem;
 }
 
 .mt-\[92px\] {
   margin-top: 92px;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-\[\] {
+  margin-bottom: ;
 }
 
 .block {
@@ -713,24 +709,12 @@ video {
   height: 2rem;
 }
 
-.h-\[473\.60px\] {
-  height: 473.60px;
-}
-
 .w-5\/6 {
   width: 83.333333%;
 }
 
 .w-6 {
   width: 1.5rem;
-}
-
-.w-\[1488px\] {
-  width: 1488px;
-}
-
-.w-\[512px\] {
-  width: 512px;
 }
 
 .w-auto {
@@ -832,11 +816,6 @@ video {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
-.bg-indigo-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -909,11 +888,6 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-2\.5 {
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
-}
-
 .py-24 {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -934,10 +908,6 @@ video {
 
 .pr-\[341px\] {
   padding-right: 341px;
-}
-
-.text-left {
-  text-align: left;
 }
 
 .text-center {
